body overflow fixed

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -4,7 +4,6 @@ body {
 	padding: 0;
 	text-align: center;
 	background-color: #4fbdb5;
-	overflow: hidden;
 	color: #fff;
 }
 
